Fix URL constructor deprecation warning (#2961)